hphp/hack/test/typecheck/switch/non_terminal_default.php.exp
File "non_terminal_default.php", line 9, characters 10-12:
Default case in switch must be terminal (NastCheck[3081])
